[package]
name = "embedded-term"
version = "0.1.1"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Yuekai Jia <equation618@gmail.com>",
    "Jiajie Chen <jiegec@qq.com>"
]
edition = "2021"
description = "Terminal emulator on embedded-graphics."
keywords = ["terminal", "no-std"]
categories = ["embedded", "gui", "no-std"]
homepage = "https://github.com/rcore-os/embedded-term"
repository = "https://github.com/rcore-os/embedded-term"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
vte = "0.13.0"
log = { version = "0.4", default-features = false, optional = true }
bitflags = "2.5.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"
embedded-graphics-core = "0.4.0"
env_logger = "0.11.3"
libc = "0.2"
pty = "0.2"
mio = "0.8.11"
termios = "0.3"

[features]
default = ["log"]
